--- a/ProyectoBanco_JK/banco_Persistencia/pom.xml
+++ b/ProyectoBanco_JK/banco_Persistencia/pom.xml
@@ -11,4 +11,15 @@
         <maven.compiler.target>20</maven.compiler.target>
         <exec.mainClass>com.mycompany.banco_persistencia.Banco_Persistencia</exec.mainClass>
     </properties>
+    
+      <dependencies>
+        
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.33</version>
+</dependency>
+</dependencies>
+
 </project>
