Comprobacion de conexion
Nomas comprobe si pude realizar la conexion a la base con exito o no

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /PoryectoBases_JKBanco/ProyectoBanco_interfaz/target/
 /ProyectoBanco_JK/banco_interfaz/target/
+/ProyectoBanco_JK/banco_Persistencia/target/
