intento de guardar cliente en la bd

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /PoryectoBases_JKBanco/ProyectoBanco_interfaz/target/
 /ProyectoBanco_JK/banco_interfaz/target/
 /ProyectoBanco_JK/banco_Persistencia/target/
+/ProyectoBanco_JK/banco_Dominio/target/
