mejora base de datos

--- a/ProyectoBanco_JK/banco_Persistencia/pom.xml
+++ b/ProyectoBanco_JK/banco_Persistencia/pom.xml
@@ -25,6 +25,16 @@
                   <artifactId>banco_Dominio</artifactId>
                   <version>${project.version}</version>
             </dependency>
+            <dependency>
+                  <groupId>${project.groupId}</groupId>
+                  <artifactId>banco_Negocio</artifactId>
+                  <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                  <groupId>${project.groupId}</groupId>
+                  <artifactId>banco_interfaz</artifactId>
+                  <version>${project.version}</version>
+            </dependency>
       </dependencies>
 
 </project>
